Shyakadev/profile (#72)
* update repo setup

* Removed unused import
* Created a base model with repetitive field

* Update task.model.ts

* fix: rename model name

Renamed the model  name for  a better clarification

* fix: formatting

* Update repo setup (#53)

* update repo setup

* Removed unused import
* Created a base model with repetitive field

* Update task.model.ts

* fix: rename model name

Renamed the model  name for  a better clarification

* fix: formatting

* fix: tsconfig and dev dependencies

* Added missing flag in tsconfig
* Added missing package for type checking

* fix: class overwrite & strict type check

* Found some field on the default model of sequelize
    > createdAt & updatedAt
* Add no-null assertion operator & optional modifier on table field

* fix: pine parameter type check

* fix: pine type issue

* declared a pine module to work with no types
         * included it, in tsconfig
* resolved path location of swagger and routes
* changed entry point from app.ts to index.ts

* ft: add profile

* create service
* create  controller
* create route
* create model

* ft: add profile API

* create profile model
* create profile controller
* create profile service
* move base model
* create profile route

* fix: getAllModelsInDir function

* swagger documentation update
