# backend/src/model/base/base.model.ts
@@ -1,0 +1,5 @@
+import { Model } from "sequelize";
+
+export class BaseModel extends Model {  
+  declare deletedAt: Date | null;
+}
