# backend/src/model/profile.model.ts
@@ -1,0 +1,56 @@
+import { DataTypes } from "sequelize";
+import { BaseModel } from "./base/base.model";
+import { sequelize } from "../config/db.config";
+
+export class Profile extends BaseModel {
+  declare user_id: number;
+
+  declare first_name: string;
+
+  declare last_name: string;
+
+  declare email: string;
+
+  declare bio: string;
+}
+Profile.init(
+  {
+    id: {
+      type: DataTypes.INTEGER.UNSIGNED,
+      autoIncrement: true,
+      primaryKey: true,
+    },
+    user_id: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+    },
+    first_name: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    last_name: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    email: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    bio: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    createdAt: {
+      type: DataTypes.DATE,
+      allowNull: false
+    },
+    updatedAt: {
+      type: DataTypes.DATE,
+      allowNull: false
+    },
+    deletedAt: {
+      type: DataTypes.DATE,
+    },
+  },
+  { tableName: "profiles", sequelize },
+);
